# ai-hedge-fund

./: .env.example  .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 02_ticker_analysis_zh.md  04_backtester_zh.md  05_validate_en.md  06_validate_zh.md  07_event_study_en.md  08_event_study_zh.md  backtester_en.md  ticker_analysis_en.md
.github/scripts/: daily_report.py  parse_issue.py  run_for_bot.py
.github/workflows/: daily-report.yml  issue-bot.yml
app/: README.md  run.sh
app/backend/: README.md
docker/: .dockerignore  Dockerfile  README.md
examples/: 01_signal_validation.sh  02_signals_to_portfolio.py  03_risk_analytics.py  04_event_study.py  05_features.py  README.md
src/: backtester.py  i18n.py  main.py  scheduler.py
src/agents/: duan_yongping.py  market_review.py  risk_manager.py  technicals.py
src/backtesting/: costs.py  engine.py  portfolio.py  trader.py
src/cli/: input.py
src/data/: cache.py  models.py  trading_calendar.py
src/event_study/: __init__.py  abnormal_returns.py  market_model.py  significance.py
src/features/: __init__.py  earnings_surprise.py  kpi_momentum.py  lead_lag.py
src/graph/: state.py
src/llm/: api_models.json  models.py
src/notifications/: __init__.py  base.py  manager.py
src/portfolio/: __init__.py  black_litterman.py  covariance.py  optimizer.py  risk_parity.py  views.py
src/report/: __init__.py  dashboard.py
src/risk/: __init__.py  correlation.py  drawdown.py  sizing.py  stress.py  volatility.py
src/signals/: __init__.py  base.py  composite.py  earnings_surprise.py  mean_reversion.py  momentum.py  pattern.py  quality.py  stat_arb.py  trend.py  types.py  utils.py  (+3 more)
tests/: test_api_rate_limiting.py
(+30 files in other folders)
