[project]
name = "ai-hedge-fund"
version = "1.0.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "langchain>=0.3.7,<0.4",
    "langchain-anthropic==0.3.5",
    "langchain-groq==0.2.3",
    "langchain-openai>=0.3.5,<0.4",
    "langchain-deepseek>=0.1.2,<0.2",
    "langchain-ollama==0.3.6",
    "langgraph==0.2.56",
    "pandas>=2.1.0,<3",
    "numpy>=1.24.0,<2",
    "python-dotenv==1.0.0",
    "matplotlib>=3.9.2,<4",
    "tabulate>=0.9.0,<0.10",
    "colorama>=0.4.6,<0.5",
    "questionary>=2.1.0,<3",
    "rich>=13.9.4,<14",
    "langchain-google-genai>=2.0.11,<3",
    "pydantic>=2.4.2,<3",
    "langchain-gigachat>=0.3.12,<0.4",
    "langchain-xai>=0.2.5,<0.3",
    "scipy>=1.11.0,<2",
    "yfinance>=1.3.0,<2",
    "akshare>=1.18.0,<2",
    "baostock>=0.8.8,<0.9",
    "cvxpy>=1.5,<2",
    "pyyaml>=6.0,<7",
    "holidays>=0.45,<1",
    "schedule>=1.2,<2",
    "apprise>=1.9,<2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "black>=23.7.0,<24",
    "isort>=5.12.0,<6",
    "flake8>=6.1.0,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Editable install of the only top-level package — lets `from src.*`
# imports work from any cwd.
packages = ["src"]

[tool.black]
line-length = 420
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
